--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="final-message" id="final-message"></div>
             <p id="final-score"></p>
             <p><strong>🔥 Gás confiável, é com a Massoni Gás! 🔥</strong></p>
-            <a id="whatsapp-share" class="whatsapp-share" target="_blank">📲 Compartilhar no WhatsApp</a>
+            <a id="whatsapp-share" class="whatsapp-share" target="_blank">Envie o cupom no Whatsapp</a>
             <p class="extra-text">Ou tire print e envie por whatsapp</p>
             <p class="extra-text"><em>cupom válido até 31.08.2025</em></p>
             <div style="margin-top: 15px;">
