--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
     <audio id="final-sound" src="https://www.myinstants.com/media/sounds/olha-o-gas.mp3"></audio>
     <audio id="error-sound" src="https://actions.google.com/sounds/v1/cartoon/wood_plank_flicks.ogg"></audio>
-    <audio id="correct-sound" src="https://actions.google.com/sounds/v1/cartoon/clang_and_wobble.ogg"></audio>
+    <audio id="correct-sound" src="https://www.myinstants.com/media/sounds/uhul.mp3"></audio>
 
     <script>
         const questions = [
